# Studying-the-Effect-of-Diffusion-on-Few-shot-guassian-splatting

./: .gitignore  GETTING_STARTED.md  README.md  REPORT.md  pyproject.toml  requirements.txt  setup.sh
configs/: project.yaml  project_natbg.yaml  project_scene02_capped.yaml
configs/experiments/: index.csv  scene01_obj__full.yaml  scene01_obj__n10_r0.yaml  scene01_obj__n10_r100_inpaint.yaml  scene01_obj__n10_r200_inpaint.yaml  scene01_obj__n10_r25_inpaint.yaml  scene01_obj__n10_r50_inpaint.yaml  scene01_obj__n20_r0.yaml  scene01_obj__n20_r100_inpaint.yaml  scene01_obj__n20_r200_inpaint.yaml  scene01_obj__n20_r25_inpaint.yaml  scene01_obj__n20_r50_inpaint.yaml  scene01_obj__n5_r0.yaml  scene01_obj__n5_r100_inpaint.yaml  (+83 more)
results/: registry.jsonl
scripts/: _bootstrap.py  build_honest_ply.py  compare.py  diag_zero123_consistency.py  evaluate.py  extract_and_segment.py  gen_grid.py  gen_svd_neighbors.py  generate_synthetic.py  make_masked_scene.py  make_masks.py  make_object_pointcloud.py  make_splits.py  mask_contact_sheet.py  prefetch_models.py  preview_inpaint_obj.py  preview_masking.py  preview_synthetic.py  recover_scene02_n20r0.sh  render_ply.py  rerun_full_7k.sh  rerun_full_bounded.sh  rerun_full_ds1.sh  rerun_full_ds4.sh  rerun_full_only.sh  rerun_full_randominit.sh  rerun_full_roomply.sh  rerun_full_short.sh  rerun_n10_randinit.sh  rerun_oom_baselines.sh  run_colmap_scene02.sh  run_experiment.py  run_grid.sh  run_grid_fill.sh  run_n10r200_svdrand.sh  run_n20_nobg_test.sh  run_n5_randinit.sh  run_natbg_full.sh  run_natbg_grid.sh  run_natbg_grid_resume.sh  (+23 more)
(+17 files in other folders)
