[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gsfewshot"
version = "0.1.0"
description = "Few-Shot Gaussian Splatting with Diffusion-Based Data Augmentation — experiment harness"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
